@@ -20,6 +20,8 @@
 14. Slightly reduce height of toolbar.
 15. Add a slight border to context view when in sidebar.
 16. Update suru icon - was a little too small.
+17. Don't attempt to align main menu for Windows < 10, as Qt seems to add some
+    menu animation that just looks weird when menu is moved.
 
 2.3.0
 -----
